<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.linhphan.presentation.feature.home.viewmodel.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/edt_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lp_hint_enter_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"
            android:onTextChanged="@{(text, start, before, count)-> viewModel.onTextChanged(text, start, before, count)}"
            android:onEditorAction="@{(view,actionId,event) -> viewModel.onEditorAction(view,actionId,event)}"
            />

        <Button
            android:id="@+id/btn_query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lp_label_get_weather"
            android:textAllCaps="false"
            android:onClick="@{(v)-> viewModel.onButtonClicked(v)}"
            android:enabled="@{viewModel.buttonState}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_city"
            android:contentDescription="@string/lp_talkback_get_weather_button"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="7"
            tools:listitem="@layout/lp_item_forecast"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_query" />

        <FrameLayout
            android:id="@+id/layoutError"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/recycler_view"
            app:layout_constraintStart_toStartOf="@id/recycler_view"
            app:layout_constraintEnd_toEndOf="@id/recycler_view"
            app:layout_constraintBottom_toBottomOf="@id/recycler_view"
            android:background="@color/colorBgErrorLayout"
            android:visibility="visible">
            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/colorTextError"
                tools:text="@string/lp_message_empty_data"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone">
            <ProgressBar
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
